# fireproxify

./: CONTRIBUTING.rst  LICENSE  Makefile  README.md  aws-regions.txt  fire.py  pyproject.toml
fireproxify/: cli.py  fireproxify.py
tests/: test_foo.py
