[tool.poetry]
name = "fireproxify"
version = "0.0.1"
description = "Fireprox as a package"
authors = ["Mayk <f7395296+yok4i@users.noreply.github.com>"]
repository = "https://github.com/yok4i/fireproxify"
documentation = "https://yok4i.github.io/fireproxify/"
readme = "README.md"
packages = [
  {include = "fireproxify"}
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
boto3 = "^1.26.50"
tldextract = "^3.4.0"
tzlocal = "^4.2"
bs4 = "^0.0.1"
lxml = "^4.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.981"
pre-commit = "^2.20.0"
tox = "^3.25.1"

[tool.poetry.scripts]
fire = "fireproxify.cli:cli_main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.isort]
profile = "black"

[tool.mypy]
files = ["fireproxify"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
